2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-network-server.c: (ui_network_server_init): use
	G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-1-player-manager.c: (game_1_player_manager_init): use
	G_DEFINE_TYPE_WITH_CODE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-1-player.c: (game_1_player_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-network-client.c: (ui_network_client_init): use
	G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/keyboard-properties.c: use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/util/clock.c: (mb_clock_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/view/monkey-canvas.c: (monkey_canvas_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/view/monkey-view.c: (monkey_view_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/view/mini-view.c: (mb_mini_view_init): use G_DEFINE_TYPE

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (ui_main_new), (leave_fullscreen),
	(window_state_event): add leave fullscreen action,menuitem and method

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (fullscreen): implement simple fullscreen

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (frame_event): listen window state and change
	fullscreen action state

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (ui_main_new), (frame_event): listen window state,
	dummy code behind

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (ui_main_new): add fullscreen menuitem to ui
	string

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (ui_main_new), (fullscreen): add fullscreen
	GtkActionEntry and dummy fullscreen callback
